# AOS

./: CMakeLists.txt  settings.cmake
libdebugger/: CMakeLists.txt
libdebugger/include/debugger/: debugger.h
libdebugger/src/: debugger.c
libnetworkconsole/src/: networkconsole.c
sos/: CMakeLists.txt
sos/src/: debugger.c  debugger.h  main.c  threads.c  threads.h  vmem_layout.h
